--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -30,6 +30,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Set up Ruby
         uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 2.7.0
       - name: Set up Node
         uses: actions/setup-node@v1
         with:
