--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Set up Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7.0
       - name: Set up Node
