--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -8,10 +8,10 @@ jobs:
 
     services:
       postgres:
-        image: postgres:11
+        image: postgres
         env:
-          POSTGRES_USER: rails_github_actions
-          POSTGRES_DB: rails_github_actions_test
+          POSTGRES_USER: postgres
+          POSTGRES_DB: tweet_weather_api_test
           POSTGRES_PASSWORD: postgres
         ports: ["5432:5432"]
         options: >-
